UI: Fix text capitalization in settings page per HIG
Correct capitalization in Base/res/ladybird/about-pages/settings.html
to comply with the Human Interface Guidelines for text capitalization.

Changes:
- Applied sentence-style capitalization to form labels, checkbox
  labels, and select option values (e.g., "New tab page URL").
- Applied Book Title capitalization to button text (e.g., "Remove
  Data").
- Ensured consistent capitalization in the Browsing Data Settings
  dialog.

Reference: Documentation/HumanInterfaceGuidelines/Text.md

--- a/Base/res/ladybird/about-pages/settings.html
+++ b/Base/res/ladybird/about-pages/settings.html
@@ -329,12 +329,12 @@
             <div class="card-header">General</div>
             <div class="card-body">
                 <div class="card-group">
-                    <label for="new-tab-page-url">New Tab Page URL</label>
+                    <label for="new-tab-page-url">New tab page URL</label>
                     <input id="new-tab-page-url" type="url" placeholder="about:newtab" />
                 </div>
 
                 <div class="card-group">
-                    <label for="default-zoom-level">Default Zoom Level</label>
+                    <label for="default-zoom-level">Default zoom level</label>
                     <select id="default-zoom-level"></select>
                 </div>
 
@@ -352,7 +352,7 @@
             <div class="card-body">
                 <div class="card-group">
                     <div class="inline-container">
-                        <label for="search-engine">Default Search Engine</label>
+                        <label for="search-engine">Default search engine</label>
                         <button id="search-settings" class="secondary-button">Settings...</button>
                     </div>
                     <p class="description">Select the search engine to use in the address bar.</p>
@@ -365,7 +365,7 @@
                 <hr />
 
                 <div class="card-group">
-                    <label for="autocomplete-engine">Search Suggestions</label>
+                    <label for="autocomplete-engine">Search suggestions</label>
                     <p class="description">Select the engine that will provide search suggestions.</p>
                     <select id="autocomplete-engine">
                         <option value="">Disable search suggestions</option>
@@ -400,7 +400,7 @@
 
                 <div class="card-group">
                     <div class="inline-container">
-                        <label for="global-privacy-control-toggle">Enable Global Privacy Control</label>
+                        <label for="global-privacy-control-toggle">Enable global privacy control</label>
                         <input id="global-privacy-control-toggle" type="checkbox" switch />
                     </div>
                     <p class="description">Tell websites not to sell or share your data.</p>
@@ -420,10 +420,10 @@
                     </div>
                     <div id="dns-settings-container" class="card-body">
                         <div class="card-group">
-                            <label for="dns-upstream">DNS Upstream</label>
+                            <label for="dns-upstream">DNS upstream</label>
                             <select id="dns-upstream">
                                 <option value="system">System DNS</option>
-                                <option value="custom">Custom DNS Server</option>
+                                <option value="custom">Custom DNS server</option>
                             </select>
                         </div>
                         <div id="custom-dns-settings" class="hidden">
@@ -435,11 +435,11 @@
                                 </select>
                             </div>
                             <div class="card-group">
-                                <label for="dnssec-toggle">Validate DNSSEC Locally</label>
+                                <label for="dnssec-toggle">Validate DNSSEC locally</label>
                                 <input id="dnssec-toggle" type="checkbox" switch />
                             </div>
                             <div class="card-group">
-                                <label for="dns-server">DNS Server (IP or hostname)</label>
+                                <label for="dns-server">DNS server (IP or hostname)</label>
                                 <input id="dns-server" type="text" />
                             </div>
                             <div class="card-group">
@@ -484,7 +484,7 @@
             </div>
             <div class="dialog-form">
                 <div class="form-group">
-                    <label for="search-custom-name">Search Engine Name</label>
+                    <label for="search-custom-name">Search engine name</label>
                     <input id="search-custom-name" type="text" placeholder="Example" />
                 </div>
                 <div class="form-group">
