--- a/Tests/LibWeb/Text/input/SVG/svg-foreignObject-abspos-size-change-during-partial-relayout.html
+++ b/Tests/LibWeb/Text/input/SVG/svg-foreignObject-abspos-size-change-during-partial-relayout.html
@@ -32,9 +32,8 @@
         // Change the abspos element's size via inline style.
         // Since this element is inside the SVG subtree (via foreignObject),
         // set_needs_layout_update() breaks at SVGSVGBox and triggers partial SVG relayout.
-        // However, the abspos element's containing block is the .container div OUTSIDE
-        // the SVG subtree, so the formatting context responsible for laying out the abspos
-        // won't run during partial SVG relayout. This means the size change won't take effect.
+        // The abspos element's containing block is the foreignObject itself, so the size
+        // change should take effect during partial SVG relayout.
         const abspos = document.getElementById("abspos");
         abspos.style.width = "100px";
         abspos.style.height = "100px";
