LibWeb: Disallow disjointed ligatures component of `font-variant`
The grammar groups this component together meaning that all
sub-components must occur together i.e.
`common-ligatures no-contextual small-caps` is valid but
`common-ligatures small-caps no-contextual` is not.

We also reuse the logic for parsing from the longhand
`font-variant-ligatures` property for simplicity.

--- a/Tests/LibWeb/Text/input/css/disallowed-font-variants.html
+++ b/Tests/LibWeb/Text/input/css/disallowed-font-variants.html
@@ -3,6 +3,10 @@
     #a {
         font-variant: jis78 small-caps full-width;
     }
+
+    #b {
+        font-variant: common-ligatures small-caps no-contextual;
+    }
 </style>
 <script src="../include.js"></script>
 <pre id="out"></pre>
