Tests/LibWeb: Support opaque file origins for error stack test
When files have an opaque origin, the "file" scheme is omitted from the
blob URL serialization in the stack trace.

This change normalizes the output in the test so that both tuple
file origins and opaque file origins (which may serialize as
'blob:ladybird/') is accepted, ensuring the test passes in
both scenarios.

--- a/Tests/LibWeb/Text/input/error-stack-must-contain-full-url.html
+++ b/Tests/LibWeb/Text/input/error-stack-must-contain-full-url.html
@@ -12,7 +12,10 @@
                         throw Error();
                     } catch (e) {
                         const uuidRegex = /[a-zA-Z0-9]+-[a-zA-Z0-9]+-[a-zA-Z0-9]+-[a-zA-Z0-9]+-[a-zA-Z0-9]+/g;
-                        globalThis.println("${type}: " + e.stack.replace(uuidRegex, "[flaky-uuid-replaced]"));
+                        const normalizedStack = e.stack
+                            .replace(uuidRegex, "[flaky-uuid-replaced]")
+                            .replace(/blob:(file:\\/\\/\\/|ladybird\\/)/g, "blob:<origin>/");
+                        globalThis.println("${type}: " + normalizedStack);
                     }
                 `;
 
