LibWeb: Handle keyword style values in string_from_style_value()
Generic font families like `sans-serif` are represented as
KeywordStyleValue, but string_from_style_value() only handled
StringStyleValue and CustomIdentStyleValue, causing a crash when
FontFaceSet.load() was called with a generic family name.

--- a/Tests/LibWeb/Text/input/css/FontFaceSet-load.html
+++ b/Tests/LibWeb/Text/input/css/FontFaceSet-load.html
@@ -29,6 +29,14 @@
         }
 
         try {
+            const result = await fontFaceSet.load("16px sans-serif");
+            println(`Load generic font family: ${result.length == 0 ? "PASS" : "FAIL"}`);
+        } catch (e) {
+            println("Load generic font family: FAIL");
+            println(e);
+        }
+
+        try {
             const result = await fontFaceSet.load("1em Hash Sans");
             println(`Load valid font: ${result.length > 0 ? "PASS" : "FAIL"}`);
         } catch (e) {
