--- a/Tests/LibWeb/Text/input/css/disallowed-font-variants.html
+++ b/Tests/LibWeb/Text/input/css/disallowed-font-variants.html
@@ -7,6 +7,10 @@
     #b {
         font-variant: common-ligatures small-caps no-contextual;
     }
+
+    #c {
+        font-variant: ordinal small-caps slashed-zero;
+    }
 </style>
 <script src="../include.js"></script>
 <pre id="out"></pre>
